[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
config = { version = "0.15.11", features = ["default", "yaml"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
poise = { version = "0.6.1", optional = true }

[features]
all = ["discord"]
discord = ["poise"]
